[package]
name = "hackernews_js_fetch"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
lto = true

[dependencies]
leptos = { version = "0.8.2" }
leptos_axum = { version = "0.8.2" , default-features = false, optional = true }
log = "0.4"
#leptos_meta = {  version = "0.8.2"  }
#leptos_router = { version = "0.8.2" }
#leptos_server = { version = "0.8.2", optional = true }
#gloo-net = { version = "0.6.0", features = ["http"] }
axum = { version = "0.8.1", default-features = false, optional = true }
#tower = { version = "0.4.13", optional = true }
#http = { version = "1.1", optional = true }
#web-sys = { version = "0.3.70", features = [
#  "AbortController",
#  "AbortSignal",
#  "Request",
#  "Response",
#] }
wasm-bindgen = "0.2.93"
#wasm-bindgen-futures = { version = "0.4.42", features = [
#  "futures-core-03-stream",
#], optional = true }

[features]
hydrate = ["leptos/hydrate"]
